refactor(api): refactor api
