# api/doc/API.yaml
@@ -18,7 +18,7 @@ tags:
 schemes:
   - http
 paths:
-  /account/balance/{address}:
+  /accounts/{address}:
     get:
       tags:
       - "Account"
@@ -38,35 +38,12 @@ paths:
           schema:
             type: "object"
             example: {
-                      "balance":0
-            }
+                      "Balance":0,
+                      "Code":null
+                      }
         400:
           description: "Invalid address"
-  /account/code/{address}:
-    get:
-      tags:
-      - "Account"
-      summary: "Get code by address"
-      description: "only a contract returns its code ,otherwise returns nil"
-      parameters:
-        - in: path
-          required: true
-          name: address
-          type: string
-          description: account address
-      produces:
-      - "application/json"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            type: "object"
-            example: {
-              "code":["0x00"]
-            }
-        400:
-          description: "Invalid address"
-  /account/storage/{address}/{key}:
+  /accounts/storage/{address}/{key}:
     get:
       tags:
       - "Account"
@@ -96,7 +73,7 @@ paths:
             }
         400:
           description: "Invalid params"
-  /transaction/id/{id}:
+  /transactions/{id}:
     get:
       tags:
       - "Transaction"
@@ -133,49 +110,7 @@ paths:
                       }
         400:
           description: "Invalid params"
-  /transaction/blocknumber/{number}/txindex/{index}:
-    get:
-      tags:
-      - "Transaction"
-      summary: "Get transaction by blocknumber with transaction index"
-      description: "returns transaction by transaction index"
-      parameters:
-        - in: path
-          required: true
-          name: number
-          type: integer
-          description: block number
-        - in: path
-          required: true
-          name: index
-          type: integer
-          description: transaction index
-      produces:
-      - "application/json"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            type: "object"
-            example:  {
-                        "ID":"0x0ec1aa6cc85b8d1dcb47e016cef88c6bf9c4d54aa828ad773d0cb7aca52417cd",
-                        "Index":0,
-                        "BlockID":"0x0000000100000000000000000000000000000000000000000000000000000002",
-                        "BlockNumber":1,
-                        "GasPrice":1000,
-                        "Gas":1000,
-                        "From":"0x970e8128ab834e8eac17ab8e3812f010678cf791",
-                        "Clauses":[
-                                    {
-                                      "To":"0x56e81f171bcc55a6ff8345e692c0f86e5b48e01a",
-                                      "Value":10,
-                                      "Data":null
-                                    }
-                                  ]
-                      }
-        400:
-          description: "Invalid params"
-  /block/id/{id}:
+  /blocks/{id}:
     get:
       tags:
       - "Block"
@@ -208,14 +143,14 @@ paths:
                       }
         400:
           description: "Invalid params"
-  /block/number/{number}:
+  /blocks:
     get:
       tags:
       - "Block"
       summary: "Get block by block number"
       description: "returns block by block number"
       parameters:
-        - in: path
+        - in: query
           required: true
           name: number
           type: integer
