# api/transaction.go
@@ -1,8 +1,6 @@
 package api
 
 import (
-	"errors"
-
 	"github.com/vechain/thor/api/utils/types"
 	"github.com/vechain/thor/chain/persist"
 	"github.com/vechain/thor/thor"
@@ -26,10 +24,10 @@ func NewTransactionInterface(txGetter transactionGetter) *TransactionInterface {
 	}
 }
 
-//GetTransactionByHash return transaction by address
-func (ti *TransactionInterface) GetTransactionByHash(txHash thor.Hash) (*types.Transaction, error) {
+//GetTransactionByID return transaction by transaction id
+func (ti *TransactionInterface) GetTransactionByID(txID thor.Hash) (*types.Transaction, error) {
 
-	tx, location, err := ti.txGetter.GetTransaction(txHash)
+	tx, location, err := ti.txGetter.GetTransaction(txID)
 	if err != nil {
 		return nil, err
 	}
@@ -47,31 +45,5 @@ func (ti *TransactionInterface) GetTransactionByHash(txHash thor.Hash) (*types.T
 	t.BlockID = location.BlockID.String()
 	t.BlockNumber = block.Header().Number()
 	t.Index = location.Index
-	return t, nil
-}
-
-//GetTransactionFromBlock return transaction from block with transaction index
-func (ti *TransactionInterface) GetTransactionFromBlock(blockNumber uint32, index uint64) (*types.Transaction, error) {
-
-	block, err := ti.txGetter.GetBlockByNumber(blockNumber)
-	if err != nil {
-		return nil, err
-	}
-
-	txs := block.Transactions()
-	if int(index+1) > len(txs) {
-		return nil, errors.New(" Transaction not found! ")
-	}
-
-	tx := txs[index]
-	t, err := types.ConvertTransaction(tx)
-	if err != nil {
-		return nil, err
-	}
-
-	header := block.Header()
-	t.BlockID = header.ID().String()
-	t.BlockNumber = header.Number()
-	t.Index = index
 	return t, nil
 }
